--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <!-- Link the style sheet here -->
+  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -28,14 +30,16 @@
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
       <!-- Insert header information here -->
+      <h1>About Us</h1>
+      Welcome to Best Cars dealership, home to the best cars in North America. We deal in the sale of domestic and imported cars at reasonable prices
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
         <img class="card-img-top" src="/static/person.png" alt="Card image">
         <div class="card-body">
           <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
+          <p>Founder</p>
+          <p class="card-text">Person1 is our founder. They have been here from the very beginning... OF TIME!</p>
           <p>person1@example.com</p>
         </div>
       </div>
@@ -44,8 +48,8 @@
         <img class="card-img-top" src="/static/person.png" alt="Card image">
         <div class="card-body">
           <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
+          <p>CEO</p>
+          <p class="card-text">Hello, person peer-grading my submition. I hope everything is going well with you!</p>
           <p>person2@example.com</p>
         </div>
       </div>
@@ -53,10 +57,10 @@
       <div class="card" style="width: 30%;">
         <img class="card-img-top" src="/static/person.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">Ensei Echida</p>
+          <p>CFO</p>
+          <p class="card-text">Ensei oversees the financial health of the company, leveraging astute financial stratezies to optimize resources and ensure fiscal responsability for sustained growth</p>
+          <p>euchida@bestcars.com</p>
         </div>
       </div>
     </div>
